--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2>Wedding Details</h2>
           <p><strong>Date:</strong> Saturday, February 01, 2025</p>
           <p><strong>Time:</strong> 11:30 AM</p>
-          <p><strong>Venue:</strong> Kingdom Hall Of Jeovah's Witnesses, Ayigya - Kumasi</p>
+          <p><strong>Venue:</strong> Kingdom Hall Of Jehovah's Witnesses, Ayigya - Kumasi</p>
           <p><strong>ZOOM Meeting Link:</strong>00000</p>
         </section>
         <section class="program-download fade-in delay-3">
