--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
   <title>Prince & Mary's Wedding</title>
   <link rel="stylesheet" href="styles.css">
@@ -21,7 +21,7 @@
           <h2>Wedding Details</h2>
           <p><strong>Date:</strong> Saturday, February 01, 2025</p>
           <p><strong>Time:</strong> 11:30 AM</p>
-          <p><strong>Venue:</strong> Kingdom Hall Of Jehovah's Witnesses, Ayigya - Kumasi</p>
+          <p><strong>Venue:</strong> Kingdom Hall Of Jeovah's Witnesses, Ayigya - Kumasi</p>
           <p><strong>ZOOM Meeting Link:</strong>00000</p>
         </section>
         <section class="program-download fade-in delay-3">
@@ -30,6 +30,18 @@
           <a href="wedding-program.pdf" class="btn" download>Download Program</a>
         </section>
       </main>
+    <footer class="footer">
+    <div class="footer-content">
+      <p>Contact Designer:</p>
+      <a href="mailto:oddatabundles@gmail.com" class="footer-link">
+        <i class="fas fa-envelope"></i> Email Us
+      </a>
+      <a href="https://wa.me/233200813800" target="_blank" class="footer-link">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+    </div>
+    <p class="footer-copy">&copy; 2025 ODDATA</p>
+  </footer>
     </div>
   </div>
   <script src="script.js"></script>
