--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="footer-content">
       <p>Contact Designer:</p>
       <a href="mailto:oddatabundles@gmail.com" class="footer-link">
-        <i class="fas fa-envelope"></i> Email Us
+        <i class="fas fa-envelope"></i> Email
       </a>
       <a href="https://wa.me/233200813800" target="_blank" class="footer-link">
         <i class="fab fa-whatsapp"></i> WhatsApp
