--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
           <p><strong>Date:</strong> Saturday, February 01, 2025</p>
           <p><strong>Time:</strong> 11:30 AM</p>
           <p><strong>Venue:</strong> Kingdom Hall Of Jeovah's Witnesses, Ayigya - Kumasi</p>
-          <p><strong>ZOOM Meeting Link:</strong>00000</p>
+          <p><strong>ZOOM Meeting Link:</strong>
+          <a href="https://zoom.us/j/" target="_blank">Join Zoom Meeting</a>
+          </p>
         </section>
         <section class="program-download fade-in delay-3">
           <h2>Wedding Program</h2>
