--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
           <p><strong>Time:</strong> 11:30 AM</p>
           <p><strong>Venue:</strong> Kingdom Hall Of Jeovah's Witnesses, Ayigya - Kumasi</p>
           <p><strong>ZOOM Meeting Link:</strong>
-          <a href="https://zoom.us/j/" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Zoom_Communications_2020_logo.svg" alt="Join Zoom Meeting" width="50">
-          </a>
+          <a href="https://zoom.us/j/" target="_blank">Join Now</a>
           </p>
         </section>
         <section class="program-download fade-in delay-3">
