--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <h2>Wedding Details</h2>
           <p><strong>Date:</strong> Saturday, February 01, 2025</p>
           <p><strong>Time:</strong> 11:30 AM</p>
-          <p><strong>Venue:</strong> Kingdom Hall Of Jeovah's Witnesses, Ayigya - Kumasi</p>
+          <p><strong>Venue:</strong> Kingdom Hall Of Jehovah's Witnesses, Ayigya - Kumasi</p>
           <p><strong>ZOOM Meeting Link:</strong>
-          <a href="https://zoom.us/j/" target="_blank">Join Now</a>
+          <a href="https://zoom.us/j/" target="_blank" class="main-content">Join Now</a>
           </p>
         </section>
         <section class="program-download fade-in delay-3">
