--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <p><strong>Time:</strong> 11:30 AM</p>
           <p><strong>Venue:</strong> Kingdom Hall Of Jehovah's Witnesses, Ayigya - Kumasi</p>
           <p><strong>ZOOM Meeting Link:</strong>
-          <a href="https://zoom.us/j/" target="_blank" class="main-content">Join Now</a>
+          <a href="https://jworg.zoom.us/j/89063179725" target="_blank" class="main-content">Join Now</a>
           </p>
         </section>
         <section class="program-download fade-in delay-3">
